# epibox

./: Cargo.toml
benches/: simple_forest_fire_bench.rs
src/: bass_diffusion.rs  bayesian_optimisation.rs  bayesian_optimisation_example.rs  boids.rs  boids_thesis.rs  disease.rs  game_of_life.rs  heroes_and_cowards.rs  lib.rs  lotka_volterra_models.rs  main.rs  nagel_Schreckenberg.rs  particle_system.rs  population.rs  schelling_segregation.rs  simple_forest_fire.rs  simple_forest_fire_with_wind.rs  situation.rs  spatial_data_structures.rs  steady_state_models.rs
